--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ main {
 
 footer {
     height: 30vh;
+    padding-top: 20px;
     background-color: #ffffff;
 }
 
@@ -52,11 +53,11 @@ footer {
     max-width: 300px;
 }
 
-.logo-text{
+.logo-text {
     text-align: right;
     position: absolute;
-   left: 300px;
-   font-size: 25px;
+    left: 300px;
+    font-size: 25px;
 }
 
 .col-logo h2 {
@@ -180,7 +181,7 @@ footer ol:first-child li:last-child button {
 }
 
 footer ol li {
-    padding-right: 15px;
+    padding-right: 12px;
     font-size: 12px;
     color: #737373;
 }
